# fastapi-iris-predictor

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
notebooks/: models.ipynb
src/fastapi_iris_predictor/: app.py
src/fastapi_iris_predictor/auth/: __init__.py  jwt_handler.py
src/fastapi_iris_predictor/config/: __init__.py  settings.py
src/fastapi_iris_predictor/database/: __init__.py  models.py
src/fastapi_iris_predictor/routes/: __init__.py  auth_routes.py  routes.py
src/fastapi_iris_predictor/schemas/: IrisInput.py  __init__.py
