[tool.poetry]
name = "fastapi-iris-predictor"
version = "0.1.0"
description = "Simple API built with FastAPI for real-time predictions on the iris flower dataset using a Logistic Regression model."
authors = ["Luís Fernando Torres <luuisotorres@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "fastapi_iris_predictor", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.115.0,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
sqlalchemy = ">=2.0.0,<3.0.0"
scikit-learn = ">=1.6.0,<2.0.0"
pandas = ">=2.2.0,<3.0.0"
pyjwt = ">=2.10.0,<3.0.0"
ipykernel = ">=6.29.0,<7.0.0"
python-dotenv = "^1.0.0"
tornado = "^6.5"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"